<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title"
            app:titleTextColor="#1C1B1F"
            android:background="#FFFBFE"
            app:menu="@menu/top_app_bar_title"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/media"
                    android:layout_width="fill_parent"
                    android:layout_height="213dp"
                    android:src="@drawable/mediabig"
                    android:contentDescription="@string/content_description" />

                <Button
                    android:id="@+id/buttonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="193dp"
                    android:backgroundTint="#6750A4"
                    android:text="@string/id"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:textSize="14sp"
                    app:cornerRadius="100dp" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="16dp"
                android:layout_marginTop="22dp"
                android:background="#F3EDF7">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/this_title"
                    android:textColor="#1C1B1F"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#49454F"
                    android:textSize="14sp"
                    android:paddingEnd="41dp"
                    android:text="@string/content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="26dp"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="45dp"
                android:gravity="center_vertical">

                <Switch
                    android:id="@+id/switch_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="52dp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_text"
                    android:textColor="#1C1B1F"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_share"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:backgroundTint="#6750A4"
                    android:layout_marginEnd="21dp"
                    android:text="@string/share"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:icon="@drawable/baseline_add_24"
                    app:cornerRadius="100dp"/>

                <Button
                    android:id="@+id/button_like"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="#6750A4"
                    android:text="@string/like"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    app:cornerRadius="100dp"
                    app:icon="@drawable/baseline_add_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_share"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>